# ldt-ui

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  build.sh
.github/workflows/: android.yml  build.yml
android_example/: .gitignore  BUILD_ANDROID.md  build.sh
android_example/app/: build.gradle
android_example/app/src/main/: AndroidManifest.xml
android_example/app/src/main/assets/: main.ldt
android_example/app/src/main/assets/pages/: home.ldt  product.ldt  summary.ldt
android_example/app/src/main/cpp/: CMakeLists.txt  android_dsl_scene.cpp  android_dsl_scene.h  native-lib.cpp
android_example/app/src/main/java/com/example/pureopengl/: MainActivity.java  MyGLSurfaceView.java  RendererLib.java
configuration/: root_directory.h.in
docs/: LDT_DSL_AI_REFERENCE.md  LDT_DSL_AI_REFERENCE_EN.md  LDT_DSL_USER_GUIDE.md  LDT_DSL_USER_GUIDE_EN.md
examples/: CMakeLists.txt  MainScene.cpp  MainScene.h  PageSwitchScene.cpp  PageSwitchScene.h  TestComponent.cpp  TestComponent.h  app_delegate.h  main.cpp
hello_world/: CMakeLists.txt  main.cpp
ldt-tests/: CMakeLists.txt
ldt-tests/cases/: README.md
ldt-tests/cases/golden/input/multiline_nowrap/: case.ldt  expected.json
ldt-tests/cases/golden/input/multiline_wrap/: case.ldt  expected.json
ldt-tests/cases/unit/layout/: flex_basic.cpp  flex_shrink.cpp
ldt-tests/cases/unit/text/: measure.cpp
ldt-tests/ldt_test_framework/: golden_runner.h  test_assert.h  test_case.h  test_env.h
ldt-tests/ldt_test_runner/: main.cpp
src/: CMakeLists.txt  application.cpp  application.h  ldt_export.h
src/components/: abstract_control.cpp  abstract_control.h  button.h  container_control.cpp  container_control.h  control_factory.cpp  control_factory.h  control_manager.cpp  control_manager.h  hit_test_helper.cpp  hit_test_helper.h  image.h  input.h  input_capture_target.cpp  input_capture_target.h  overlay_event_root.cpp  overlay_event_root.h  panel.h  radio_button.h  resolved_mount_service.cpp  resolved_mount_service.h  resolved_runtime.cpp  resolved_runtime.h  root.h  scene.cpp  scene.h  scroll_helper.h  scrollbar_control.cpp  scrollbar_control.h  stage.h  text.cpp  text.h  ui_component.h  uitypes.cpp  uitypes.h
src/components/combo_box/: combo_box.cpp  combo_box.h  combo_box_item.cpp  combo_box_item.h  combo_box_popup.cpp  combo_box_popup.h  combo_trigger.cpp  combo_trigger.h
src/debugger/: DebugOverlay.cpp  DebugOverlay.h
src/engine/: Window.cpp  Window.h  astbuild_engine.cpp  astbuild_engine.h  box_model_engine.cpp  box_model_engine.h  compositor.cpp  compositor.h  document_runtime.cpp  document_runtime.h  document_update_plan.h  engine.cpp  engine.h  event_dispatcher.cpp  event_dispatcher.h  input_events.h  layout_engine.cpp  layout_engine.h  platform_host.h  preview_view_coordinator.h  resource_manager.cpp  resource_manager.h  style_engine.cpp  style_engine.h  text_measure_cache.cpp  text_measure_cache.h  ui_event_system.cpp  ui_event_system.h  update_scheduler.cpp  update_scheduler.h  view_coordinator.cpp  view_coordinator.h  window_platform_host.h
src/engine/capability/: capability.h  capability_host.h  drag_capability_lookup.cpp  drag_capability_lookup.h  drag_manager.cpp  drag_manager.h
src/engine/core/: ast_node.cpp  ast_node.h  ast_snippet.cpp  ast_snippet.h  attribute.cpp  attribute.h  computed_layout.cpp  computed_layout.h  computed_style.h  coordinate_types.h  node_flags.cpp  node_flags.h  parse.cpp  parse.h  property_provider.h  property_resolver.h  resolved_builder.cpp  resolved_builder.h  resolved_node.cpp  resolved_node.h  resolved_node_query.cpp  resolved_node_query.h  resolved_rule_scope.h  resolved_tree.cpp  resolved_tree.h  resolved_tree_view.cpp  resolved_tree_view.h  tree_synchronizer.cpp  tree_synchronizer.h
src/layout/: block_layout.cpp  block_layout.h  flex_layout.cpp  flex_layout.h  inline_layout.cpp  inline_layout.h
src/misc/: filesystem.cpp  filesystem.h  float_utils.cpp  float_utils.h  image_util.cpp  image_util.h  logger.cpp  logger.h  perf_timer.h  render_stats.h  service_registry.cpp  service_registry.h  stable_id.cpp  stable_id.h  ui_diagnostics.cpp  ui_diagnostics.h  utf8util.cpp  utf8util.h  view_base.h
src/render/: display_list.cpp  display_list.h  drawer.h  graphics_context.h  graphics_types.h  opengl_drawer_android.cpp  opengl_drawer_android.h  opengl_drawer_factory.cpp  opengl_drawer_factory.h  opengl_drawer_impl.cpp  opengl_drawer_impl.h  renderer.cpp  renderer.h  text_layout.h  text_measurer.h
