cmake_minimum_required (VERSION 3.10)
set(PROJECT_NAME ldt_ui)
project (${PROJECT_NAME})
set (${PROJECT_NAME}_VERSION_MAJOR 1)
set (${PROJECT_NAME}_VERSION_MINOR 0)
set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1 CACHE INTERNAL "Suppress third-party CMake developer warnings")

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

option(LDT_ENABLE_RENDERING "Enable OpenGL rendering (glad + freetype)" ON)

set (3RD_DIR ${PROJECT_SOURCE_DIR}/thirdparty)
set (CMAKE_MODULE_PATH ${3RD_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
function(source_group_by_dir)
    if(MSVC)
        set(source_files ${ARGV0})
        set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
		if(${ARGC} EQUAL 2)
			set(sgbd_cur_dir ${ARGV1})
		endif()
        foreach(sgbd_file ${${source_files}})
            string(REGEX REPLACE ${sgbd_cur_dir}/\(.*\) \\1 sgbd_fpath ${sgbd_file})
            string(REGEX REPLACE "\(.*\)/.*" \\1 sgbd_group_name ${sgbd_fpath})
            string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
            string(REPLACE "/" "\\" sgbd_group_name ${sgbd_group_name})
            if(sgbd_nogroup)
                set(sgbd_group_name "\\")
            endif(sgbd_nogroup)
            source_group(${sgbd_group_name} FILES ${sgbd_file})
        endforeach(sgbd_file)
    endif()
endfunction()

function(link_directory_by_cl dir)
	foreach(arg IN LISTS ARGN)
		IF(CMAKE_CL_64)
			link_directories(${dir}/${arg}/lib/Win64)
		ELSE(CMAKE_CL_64)
			link_directories(${dir}/${arg}/lib/Win32)
		ENDIF(CMAKE_CL_64)
	endforeach()
endfunction()

set(ROOT_DIR ${PROJECT_SOURCE_DIR})
configure_file(configuration/root_directory.h.in configuration/root_directory.h @ONLY)
include_directories(${CMAKE_BINARY_DIR}/configuration)

if (CMAKE_BUILD_TYPE)
	string(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
endif()

########################################
# glfw
set (GLFW_DIR ${3RD_DIR}/glfw)
# 保证glfw dir被编译
if(WIN32)
add_subdirectory (${GLFW_DIR})
else()
find_package(GLFW)
endif()
# glad
set (GLAD_DIR ${3RD_DIR}/glad)
if(LDT_ENABLE_RENDERING)
    include_directories (${GLAD_DIR}/include)
    add_library (glad ${GLAD_DIR}/src/glad.c)
    set_target_properties(glad PROPERTIES FOLDER 3rd)
endif()
# freetype
set (FREETYPE_DIR ${3RD_DIR}/freetype)
if(LDT_ENABLE_RENDERING)
    add_subdirectory (${FREETYPE_DIR})
    set_target_properties(freetype PROPERTIES FOLDER 3rd)
    if(MSVC)
        target_compile_options(freetype PRIVATE /wd4819 /wd4018 /wd4267 /wd4244 /wd4312)
    endif()
endif()
########################################
add_subdirectory(src)
add_subdirectory(examples)
if(EXISTS ${CMAKE_SOURCE_DIR}/ldt-tests/CMakeLists.txt)
    add_subdirectory(ldt-tests)
endif()

